[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"sha2" = "0.10.9"
"hex" = "0.4.3"
"sled" = "0.34.7"
"bincode" = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
"k256" = { version = "0.13.4", features = ["ecdsa"] }
clap = { version = "4.5.37", features = ["derive"] }
axum = { version = "0.7.9" }
tokio = { version = "1.45.0", features = ["full"] }
pbkdf2 = "0.12.2"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }